--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-anyio==3.7.1
-click==8.1.7
-colorama==0.4.6
-exceptiongroup==1.1.3
-fastapi==0.104.0
-h11==0.14.0
-httptools==0.6.1
-idna==3.4
-pydantic==2.4.2
-python-dotenv==1.0.0
-PyYAML==6.0.1
-sniffio==1.3.0
-starlette==0.27.0
-SQLAlchemy==2.0.22
-typing_extensions==4.8.0
-uvicorn==0.23.2
-watchfiles==0.21.0
-websockets==12.0
+anyio
+click
+colorama
+exceptiongroup
+fastapi
+h11
+httptools
+idna
+pydantic
+python-dotenv
+PyYAML
+sniffio
+starlette
+SQLAlchemy
+typing_extensions
+uvicorn
+watchfiles
+websockets
