--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
+annotated-types
 anyio
 click
 colorama
 exceptiongroup
 fastapi
+greenlet
 h11
 httptools
 idna
+psycopg
+psycopg2-binary
 pydantic
+pydantic-settings
+pydantic_core
 python-dotenv
 PyYAML
 sniffio
-starlette
 SQLAlchemy
+starlette
 typing_extensions
+tzdata
+uuid
 uvicorn
 watchfiles
 websockets
